# anatomy-of-a-stark-rust

./: .gitignore  Cargo.toml  README.md
crypto-bigint/: Cargo.toml
crypto-bigint/src/: int.rs  lib.rs  limb.rs  non_zero.rs  uint.rs
extended_gcd/: Cargo.toml
extended_gcd/src/: lib.rs
fiat_shamir/: Cargo.toml
fiat_shamir/src/: lib.rs
finite_fields/: Cargo.toml
finite_fields/src/: field_element.rs  lib.rs
fri/: Cargo.toml
fri/src/: lib.rs
iop/: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs
polynomials/: Cargo.toml
polynomials/src/: degree.rs  lib.rs  multivar_polynomial.rs  polynomial.rs
