[package]
name = "finite_fields"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { path = "../crypto-bigint", features = ["serde"] }
extended_gcd = { path = "../extended_gcd" }
serdect = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
